[project]
name = "comarch-woocomerence-sync"
version = "1.0"
description = ""
authors = [
    {name = "maxthesyntax",email = "maks@x-net.pl"}
]
requires-python = ">=3.14"
dependencies = [
    "pyodbc (>=5.3.0,<6.0.0)",
    "woocommerce (>=3.0.0,<4.0.0)"
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
